Bug fix: remove layout shift due to chakra loading component in home page.

--- a/src/components/common/SearchInput/SearchInput.module.css
+++ b/src/components/common/SearchInput/SearchInput.module.css
@@ -1,14 +1,3 @@
-.hotKeys {
-  display: flex;
-  padding-right: 4rem;
-  justify-content: center;
-}
 form {
   width: 50vw;
 }
-@media screen and (max-width: 660px) {
-  .hotKeys {
-    display: none;
-  }
-}
-
